[gd_scene load_steps=9 format=3 uid="uid://bun2rmeoeq5dp"]

[ext_resource type="Texture2D" uid="uid://doxpcpdn6ujtw" path="res://Sprites/TileSpriteSheet.png" id="1_baa0u"]
[ext_resource type="Script" path="res://Scrips/Game_Logic/shop.gd" id="1_o4tge"]
[ext_resource type="PackedScene" uid="uid://drrsju0o4e3m8" path="res://Prefabs/Classes/shop_cell.tscn" id="3_op3ch"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_wi2ro"]
vertices = PackedVector2Array(-6, -32, 8, -32, 32, -6, 32, 9.5, 7.5, 32, -7, 32, -32, 11.5, -32, -7.5)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5, 6, 7)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-6, -32, 8, -32, 32, -6, 32, 9.5, 7.5, 32, -7, 32, -32, 11.5, -32, -7.5)])

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_md4yh"]
polygon = PackedVector2Array(-32, -2, -33, -63, 31, -64, 32, -2)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_5lmdx"]
polygon = PackedVector2Array(-32, -1, -31, -62, 30, -64, 32, -3)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_go7hu"]
texture = ExtResource("1_baa0u")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_wi2ro")
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -27.5, 32, -28, 32, 32, -32, 32)
0:1/size_in_atlas = Vector2i(1, 2)
0:1/0 = 0
0:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_md4yh")
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/size_in_atlas = Vector2i(1, 2)
1:1/0 = 0
1:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_5lmdx")
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -1, 32, -1.5, 31, 63.5, -32.5, 62)

[sub_resource type="TileSet" id="TileSet_uet37"]
tile_size = Vector2i(64, 64)
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 2
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_go7hu")

[node name="Shop" type="Node2D"]
script = ExtResource("1_o4tge")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_uet37")
format = 2
layer_0/name = "GroundTiles"
layer_0/y_sort_origin = 20
layer_0/tile_data = PackedInt32Array(458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 589835, 0, 0, 458763, 0, 0, 524299, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 524308, 0, 0, 589844, 0, 0, 589843, 0, 0, 589842, 0, 0, 589841, 0, 0, 589840, 0, 0, 589839, 0, 0, 589838, 0, 0, 589837, 0, 0, 589836, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 393236, 0, 0, 393235, 0, 0, 393234, 0, 0, 393233, 0, 0, 393232, 0, 0, 393231, 0, 0, 393230, 0, 0, 393229, 0, 0, 393228, 0, 0, 393227, 0, 0, 393226, 0, 0, 393225, 0, 0)
layer_1/name = "OnGroundTiles"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 1
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()
layer_2/name = "AirTiles"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 5
layer_2/tile_data = PackedInt32Array()

[node name="Right" type="Marker2D" parent="."]
position = Vector2(1185, 540)

[node name="ShopCell1" parent="Right" instance=ExtResource("3_op3ch")]

[node name="Center" type="Marker2D" parent="."]
position = Vector2(960, 540)

[node name="ShopCell2" parent="Center" instance=ExtResource("3_op3ch")]

[node name="Left" type="Marker2D" parent="."]
position = Vector2(735, 540)

[node name="ShopCell3" parent="Left" instance=ExtResource("3_op3ch")]
